# old_dotfiles

./: .Xmodmap  .Xresources  .ansible.cfg  .bashrc  .funky  .gdbinit  .gitconfig  .gitconfig-work  .gitignore  .gitignore_global  .gitmessage  .gitmodules  .globalalias  .globrc  .ideavimrc  .localalias  .profile  .profile.swn  .rgignore  .stow-global-ignore  .stow-local-ignore  .taskrc  .taskrc.bak  .tmux.conf  .urlview  .vimrc  .vimrc.vim.swo  .vimrc.vim.swp  .xbindkeysrc  .xinitrc  .xmobarrc  .zprofile  .zshrc  README.md  bashrc  globalEnvs  globrc  gpg-agent.conf  oh-my-zsh  plugins.vim  (+8 more)
.bash-completions/: timew
.config/: aliases.sh  debian.sh  flake8  gentoo.sh  jrnl  macos.sh  mimeapps.list  okularpartrc  okularrc  pylintrc  rgrc
.cookiecutters/: _zsh_completion  c.mk  exe.py  full.sh  gtest.mk  hw.tex  main.c  minimal.sh  py2_template.py  pytest.py  pytest_script.py  robot.yaml  shunit.sh  template.awk  template.exp  template.py  template.tex  template.yaml  test  unittest.py
.cookiecutters/c/{{ cookiecutter.project|lower }}/: .localalias  CMakeLists.txt
.cookiecutters/c/{{ cookiecutter.project|lower }}/src/: CMakeLists.txt
.cookiecutters/c/{{ cookiecutter.project|lower }}/test/: CMakeLists.txt
.cookiecutters/cc/{{ cookiecutter.project|lower }}/test/: CMakeLists.txt  main.cc  test.h
.docker/: .buildNodeID  config.json
.gnupg/: gpg-agent.conf
.matlab/: startup.m
.mutt/: .vimrc  aliases  mailcap  muttrc  passwd  view_attachment
.ssh/: id_rsa  id_rsa.pub  known_hosts
.task/: .lzshrc
.thunderbird/: profiles.ini
.timewarrior/: .funky  .lshrc  .lzshrc  timewarrior.cfg
.vim/: .netrwhist  makebox.vim  plugins.vim  viminfo  viminfo (aphrodite's conflicted copy 2017-06-19)  viminfo (aphrodite's conflicted copy 2017-06-27)  viminfo (aphrodite's conflicted copy 2017-06-29)  viminfo (aphrodite's conflicted copy 2017-07-01)  viminfo (aphrodite's conflicted copy 2017-07-03)  viminfo (aphrodite's conflicted copy 2017-07-11)  viminfo (aphrodite's conflicted copy 2017-07-12)  vimrc
.weechat/: buddylist.txt  buflist.conf  fset.conf  irc.conf  logger.conf  plugins.conf  sec.conf  urlserver_list.txt  weechat.conf
.xmonad/: xmonad-x86_64-linux  xmonad.errors  xmonad.hi  xmonad.hs
.xournal/: config  recent-files
UltiSnips/: mytex.snippets  tex.snippets
bspwm/: bspwmrc
extras/: GTD.sh  GTD.zsh  aliases  aliases.sh  eternal_history.sh  gentoo.sh  globrc  make.conf  oh-my-zsh  plugins.vim  taskwarrior.zsh
home/: .gitconfig  .gitignore_global  .localalias  .lshrc  .taskrc  .taskrc.bak  .tmux.conf  .xinitrc  .xmobarrc  .zprofile  .zshrc
home/.cookiecutters/c/{{ cookiecutter.project|lower }}/src/: CMakeLists.txt  {{ cookiecutter.project|lower if cookiecutter.lib == 'y' else 'main' }}.{{ cookiecutter.filetype }}  {{ cookiecutter.project|lower }}.h
lemonbar/: panel  panel_bar  panel_config
main/: QtProject.conf  Trolltech.conf  baloofilerc  dolphinrc  gtkrc  gtkrc-2.0  kactivitymanagerdrc  kconf_updaterc  kdebugrc  kded_device_automounterrc  kdeglobals  kglobalshortcutsrc  khotkeysrc  kioclientrc  konsolerc  ksmserverrc  ktimezonedrc  kwalletrc  mimeapps.list  okularpartrc  okularrc  plasmashellrc  (+2 more)
tmp/: A.txt  (+13 more)
tmp/poe/: pyproject.toml
(+2109 files in other folders)
