[tool.poetry]
name = "poe"
version = "0.1.0"
description = ""
authors = ["Bryan Bugyi <bryanbugyi34@gmail.com>"]

[tool.poetry.dependencies]
python = "2.7.18"
enum34 = "1.0.4"
setuptools = "44.0.0"
pysocks = "1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
